--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+   <head>
+    <title> Echore Server </title>
+    <meta charset="UTF-8">
+  </head>
     <body>
         <h1>Hello world</h1>
         <p>I'm hosted with Github Pages.</p>
