--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
   </head>
     <body>
-        <h1>Hello world</h1>
-        <p>I'm hosted with Github Pages.</p>
+        <center>
+            <h1><font color="blue">Echore Server</font></h1>
+            <p>音色サーバーをベースとした新しい感覚のPvPサーバーです。</p>
+            <p> Discord: <a href="https://discord.gg/tvZ33RXFP5">ここをクリック</a></p>
+        </center>
     </body>
 </html>
