--- a/rules.html
+++ b/rules.html
@@ -40,22 +40,6 @@ div#pickup li {
 	list-style-type:none; 		/*リストマーカー無しにする*/
 	line-height:1.8;		/*行の高さを1.8倍にする*/
 }
-div.information ul{
-  list-style:none;
-  width:80%;
-  display:flex;
-  justify-content:space-between;
-}
-div.information li{
-    width:48%;
-    padding:0 10px;
-    }
-div.information h2{
-    font-size:22px;
-  }
-  div.information p{
-    font-size:16px
-  }
 a {
     text-decoration: none;
 }
@@ -119,21 +103,12 @@ a:link    { text-decoration:     none; color: black; }
             </div>
             <div class="right-column">
                 <center>
-                    <h1><font color="aquamarine" size=7><strong>Miz Network</strong></font></h1>
-                    <p>新しい感覚のPvPサーバーです。</p>
-                    <p> Coming soon...</p>
-                    <div class="information">
-                        <ul>
-                            <li>
-                              <h2>サーバーの特徴</h2>
-                              <p>新しい感覚のPvPができます</p>
-                            </li>
-                            <li>
-                              <h2>todo</h2>
-                              <p>todo</p>
-                            </li>
-                          </ul>
-                    </div>
+                    <h1><font color="aquamarine" size=7><strong>Rules - ルール</strong></font></h1>
+                    <ul type="none">
+                        <li>
+                            <p>todo</p>
+                        </li>
+                    </ul>
                 </center>
             </div>
           </div>
