--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 }
 .left-column {
   opacity: 1.0;
-  background: rgb(170, 170, 170);
+  background: white;
   width: 12%;
   margin: -12px;
 }
@@ -89,10 +89,11 @@ div.information h2{
 a {
     text-decoration: none;
 }
+
 a:link    { text-decoration:     none; color: black; }
   a:visited { text-decoration:     none; color: black; }
   a:active  { text-decoration:     none; color:black; }
-  a:hover   { text-decoration: none; color: seashell; }
+  a:hover   { text-decoration: none; color: blue; }
     </style>
   </head>
     <body bgcolor="white">
@@ -106,7 +107,6 @@ a:link    { text-decoration:     none; color: black; }
                             <p><big><strong>メニュー</strong></big></p>
                             <li><a href="./index.html">ホーム</a></li>
                             <li><a href="./rules.html">ルール</a></li>
-                            <li><a href="./devs.html" >運営陣</a></li>
                             <li><a href="./howtoplay.html" >遊び方</a></li>
                             <li><a href="./commands.html" >コマンド</a></li>
                             <li><a href="./terms.html" >利用規約</a></li>
@@ -163,9 +163,52 @@ a:link    { text-decoration:     none; color: black; }
             </div>
             <div class="right-column">
                 <center>
-                    <h1><font color="aquamarine" size=7><strong>Miz Network</strong></font></h1>
-                    <p>新しい感覚のPvPサーバーです。</p>
-                    <p> Coming soon...</p>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+
                     <div class="information">
                         <ul>
                             <li>
@@ -177,6 +220,29 @@ a:link    { text-decoration:     none; color: black; }
                               <p>todo</p>
                             </li>
                           </ul>
+                    </div>
+                    <h1><font color="aquamarine" size=7><strong>運営陣の紹介</strong></font></h1>
+                    <ul type="none">
+                        <li>
+                            <h3>chino0810</h3>
+                            <p><img src="./images/chino0810.png" title="chino0810" alt="開発者" align="middle">- 開発者</p>
+                            <p>todo: hi!</p>
+                        </li>
+
+                    </ul>
+                    <div class="information">
+                        <ul>
+                            <li>
+                                <h3>banira4649</h3>
+                                <p><img src="./images/banira4649.png" title="banira4649" alt="開発者" align="middle">- スパゲッティ職人</p>
+                                <p>todo: hi!</p>
+                            </li>
+                            <li>
+                                <h3>Lyrica0954</h3>
+                                <p><img src="./images/Lyrica0954.png" title="Lyrica0954" alt="開発者" align="middle">- スパゲッティ職人</p>
+                                <p>todo: hi!</p>
+                            </li>
+                        </ul>
                     </div>
                 </center>
             </div>
