--- a/rules.html
+++ b/rules.html
@@ -39,7 +39,7 @@ body {
 }
 .left-column {
   opacity: 1.0;
-  background: rgb(170, 170, 170);
+  background: white;
   width: 12%;
   margin: -12px;
 }
@@ -75,7 +75,7 @@ a {
 a:link    { text-decoration:     none; color: black; }
   a:visited { text-decoration:     none; color: black; }
   a:active  { text-decoration:     none; color:black; }
-  a:hover   { text-decoration: none; color: seashell; }
+  a:hover   { text-decoration: none; color:  blue; }
     </style>
   </head>
     <body bgcolor="white">
@@ -88,7 +88,6 @@ a:link    { text-decoration:     none; color: black; }
                                 <p><big><strong>メニュー</strong></big></p>
                                 <li><a href="./index.html">ホーム</a></li>
                                 <li><a href="./rules.html">ルール</a></li>
-                                <li><a href="./devs.html" >運営陣</a></li>
                                 <li><a href="./howtoplay.html" >遊び方</a></li>
                                 <li><a href="./commands.html" >コマンド</a></li>
                                 <li><a href="./terms.html" >利用規約</a></li>
